--- a/url-shortner/src/main/resources/application.properties
+++ b/url-shortner/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8080
+spring.datasource.url=jdbc:mysql://mysqldb:3306/db
+spring.datasource.username=test123
+spring.datasource.password=test123
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
