--- a/url-shortner/src/main/resources/application.properties
+++ b/url-shortner/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=test123
 spring.datasource.password=test123
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database=default
